--- a/sockjs/package.json
+++ b/sockjs/package.json
@@ -12,7 +12,7 @@
         "morgan": "1.0.x",
         "errorhandler": "1.0.x",
         "response-time": "1.0.x",
-        "sockjs":"*",
+        "sockjs":"0.3.x",
         "jade": "1.3.x"
     },
     "author": "Itai Koren (@itkoren)",
